--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>圆环进度条</title>
-    <<script src="http://cdn.static.runoob.com/libs/jquery/1.10.2/jquery.min.js"></script>
+    <<script src="jquery-3.0.0.min.js"></script>
     <style>
         .loading,.circle,.percent{
             position: absolute;
